# mtix

./: .gitignore  .golangci.yml  .goreleaser.yaml  .tool-versions  ADR-001-STORAGE-ENGINE.md  ADR-002-REDUNDANT-STORAGE.md  ADR-003-DISTRIBUTED-NODE-IDENTITY.md  APPROVED-PACKAGES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING-STYLE.md  CONTRIBUTING-LLM.md  CONTRIBUTING.md  FR-19-HOOKS-NOTIFICATIONS.md  FR-MULTI-PROJECT.md  LICENSE  Makefile  NOTICE  QUALITY-STANDARDS.md  README.md  REQUIREMENTS.md  SECURITY.md  TDD-WORKFLOW.md  USERMANUAL.md  example_hooks_test.go  go.mod  go.sum  requirement-prompts.md  requirement-ui.md  scaffolding_test.go  traceability_test.go
.claude-plugin/: .mcp.json  marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.mtix/: config.yaml  tasks.json
api/: embed.go  embed_test.go  openapi.yaml
benchmarks/: README.md  memory_test.go  pool_config_test.go  solo_latency_test.go  sync_throughput_test.go
docs/: AGENTS.md  BLOCKED_HANDLING.md  CLI_REFERENCE.md  CONTEXT_CHAIN.md  MCP-SETUP.md  PATTERNS.md  RELEASE-CHECKLIST.md  SECURITY-MODEL.md  SESSION_PROTOCOL.md  SKILL.md  STATUS_MACHINE.md  SYNC-DESIGN.md  SYNC-PROTOCOL.md  TROUBLESHOOTING.md  WORKFLOWS.md  traceability.json
e2e/: agent_lifecycle_e2e_test.go  agent_workflow_test.go  benchmark_test.go  concurrent_agents_test.go  export_import_test.go  race_test.go  (+9 more)
sdk/python/: README.md  pyproject.toml
sdk/python/mtix/: __init__.py  client.py  types.py
sdk/python/mtix/pb/: __init__.py
sdk/python/tests/: test_client.py  test_types.py
(+650 files in other folders)
